# vide

./: .gitignore  .travis.yml  CMakeLists.txt
.github/workflows/: cpp.yml
clotho/: CMakeLists.txt
clotho/include/: CMakeLists.txt
clotho/include/clotho/: thread.h  version.h.in
clotho/src/: CMakeLists.txt  thread.cc
cmake/: GetGitRevisionDescription.cmake  PreventInSourceBuilds.cmake
