set(PROJECT_SOURCES
  )

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(${PROJECT_NAME} Threads::Threads)

set_target_properties(${PROJECT_NAME} PROPERTIES
  VERSION ${PROJECT_VERSION}
  PUBLIC_HEADER "${PUBLIC_HEADERS}"
  )

install(TARGETS ${PROJECT_NAME}
  EXPORT ${PROJECT_NAME}_targets
  RUNTIME DESTINATION bin COMPONENT libs
  )
